cambios agregue cuenta de lol

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <p>
         Hola, este es mi primer sitio web,
-        contactarme a tipe@gmail.com 
+        contactarme a tipe@gmail.com y en league of legends
+        LAN Tiipsan21
     </p>
 </body>
 </html>
